# TangorineBA

./: ChangeLog  INSTALL  Makefile.am  Makefile.in  README  TODO  aclocal.m4  configure  configure.ac
data/: Makefile.am  Makefile.in  main-window.ui  org.gtk.TangorineBA.desktop  ui.xml
data/icons/: Makefile.am  Makefile.in
data/ui/: Makefile.am  Makefile.in  main-window.ui
src/: App.h  AppWin.h  BTree-dd.tcc  Board.cc  Board.h  Callback.cc  Callback.h  Digraph.cc  Digraph.h  Makefile.am  Makefile.in  Stack.cc  Stack.h  common.h  main.cc
test/: Makefile.am  Makefile.in  Test.cc  Test.h  two_regular_cells_with_horizontal_diff_shapes.cc  two_regular_cells_with_horizontal_diff_shapes.expected  two_regular_cells_with_horizontal_equal_shapes.cc  two_regular_cells_with_horizontal_equal_shapes.expected  two_regular_cells_with_vertical_diff_shapes.cc  two_regular_cells_with_vertical_diff_shapes.expected  two_regular_cells_with_vertical_equal_shapes.cc  two_regular_cells_with_vertical_equal_shapes.expected  zero_board_three_adj_horizontal_identical_cells.cc  zero_board_three_adj_horizontal_identical_cells.expected  zero_board_three_adj_horizontal_identical_cells.input  zero_board_three_adj_horizontal_identical_through_imm_cells.cc  zero_board_three_adj_horizontal_identical_through_imm_cells.expected  zero_board_three_adj_vertical_identical_cells.cc  zero_board_three_adj_vertical_identical_cells.expected  zero_board_three_adj_vertical_identical_through_imm_cells.cc  zero_board_three_adj_vertical_identical_through_imm_cells.expected  zero_board_two_regular_cells_with_horizontal_diff_shapes.cc  zero_board_two_regular_cells_with_horizontal_diff_shapes.expected  zero_board_two_regular_cells_with_horizontal_diff_shapes.input  zero_board_two_regular_cells_with_horizontal_equal_shapes.cc  zero_board_two_regular_cells_with_horizontal_equal_shapes.expected  zero_board_two_regular_cells_with_vertical_diff_shapes.cc  zero_board_two_regular_cells_with_vertical_diff_shapes.expected  zero_board_two_regular_cells_with_vertical_diff_shapes.input  zero_board_two_regular_cells_with_vertical_equal_shapes.cc  zero_board_two_regular_cells_with_vertical_equal_shapes.expected  zero_board_two_regular_cells_with_vertical_equal_shapes.input
