TESTS = \
	zero_board_two_regular_cells_with_horizontal_equal_shapes \
	zero_board_two_regular_cells_with_horizontal_diff_shapes \
	zero_board_two_regular_cells_with_vertical_equal_shapes \
	zero_board_two_regular_cells_with_vertical_diff_shapes \
	zero_board_three_adj_horizontal_identical_cells \
	zero_board_three_adj_horizontal_identical_through_imm_cells \
	zero_board_three_adj_vertical_identical_cells \
	zero_board_three_adj_vertical_identical_through_imm_cells \
	two_regular_cells_with_horizontal_equal_shapes \
	two_regular_cells_with_horizontal_diff_shapes \
	two_regular_cells_with_vertical_equal_shapes \
	two_regular_cells_with_vertical_diff_shapes

check_PROGRAMS = \
		zero_board_two_regular_cells_with_horizontal_equal_shapes \
		zero_board_two_regular_cells_with_horizontal_diff_shapes \
		zero_board_two_regular_cells_with_vertical_equal_shapes \
		zero_board_two_regular_cells_with_vertical_diff_shapes \
		zero_board_three_adj_horizontal_identical_cells \
		zero_board_three_adj_horizontal_identical_through_imm_cells \
		zero_board_three_adj_vertical_identical_cells \
		zero_board_three_adj_vertical_identical_through_imm_cells \
		two_regular_cells_with_horizontal_equal_shapes \
		two_regular_cells_with_horizontal_diff_shapes \
		two_regular_cells_with_vertical_equal_shapes \
		two_regular_cells_with_vertical_diff_shapes

AUTOMAKE_OPTIONS = subdir-objects
AM_CXXFLAGS = `pkg-config --cflags gtk+-3.0` -std=c++11 -O2
LIBS = `pkg-config --libs gtk+-3.0`

zero_board_two_regular_cells_with_horizontal_equal_shapes_SOURCES = \
	../src/Board.cc \
	../src/Digraph.cc \
	../src/Callback.cc \
	Test.cc \
	zero_board_two_regular_cells_with_horizontal_equal_shapes.cc

zero_board_two_regular_cells_with_horizontal_diff_shapes_SOURCES = \
	../src/Board.cc \
	../src/Digraph.cc \
	../src/Callback.cc \
	Test.cc \
	zero_board_two_regular_cells_with_horizontal_diff_shapes.cc

zero_board_two_regular_cells_with_vertical_equal_shapes_SOURCES = \
	../src/Board.cc \
	../src/Digraph.cc \
	../src/Callback.cc \
	Test.cc \
	zero_board_two_regular_cells_with_vertical_equal_shapes.cc

zero_board_two_regular_cells_with_vertical_diff_shapes_SOURCES = \
	../src/Board.cc \
	../src/Digraph.cc \
	../src/Callback.cc \
	Test.cc \
	zero_board_two_regular_cells_with_vertical_diff_shapes.cc

zero_board_three_adj_horizontal_identical_cells_SOURCES = \
	../src/Board.cc \
	../src/Digraph.cc \
	../src/Callback.cc \
	Test.cc \
	zero_board_three_adj_horizontal_identical_cells.cc

zero_board_three_adj_horizontal_identical_through_imm_cells_SOURCES = \
	../src/Board.cc \
	../src/Digraph.cc \
	../src/Callback.cc \
	Test.cc \
	zero_board_three_adj_horizontal_identical_through_imm_cells.cc

zero_board_three_adj_vertical_identical_cells_SOURCES = \
	../src/Board.cc \
	../src/Digraph.cc \
	../src/Callback.cc \
	Test.cc \
	zero_board_three_adj_vertical_identical_cells.cc

zero_board_three_adj_vertical_identical_through_imm_cells_SOURCES = \
	../src/Board.cc \
	../src/Digraph.cc \
	../src/Callback.cc \
	Test.cc \
	zero_board_three_adj_vertical_identical_through_imm_cells.cc

two_regular_cells_with_horizontal_equal_shapes_SOURCES = \
	../src/Board.cc \
	../src/Digraph.cc \
	../src/Callback.cc \
	Test.cc \
	two_regular_cells_with_horizontal_equal_shapes.cc

two_regular_cells_with_horizontal_diff_shapes_SOURCES = \
 	../src/Board.cc \
 	../src/Digraph.cc \
 	../src/Callback.cc \
 	Test.cc \
 	two_regular_cells_with_horizontal_diff_shapes.cc

two_regular_cells_with_vertical_equal_shapes_SOURCES = \
 	../src/Board.cc \
 	../src/Digraph.cc \
 	../src/Callback.cc \
 	Test.cc \
 	two_regular_cells_with_vertical_equal_shapes.cc

two_regular_cells_with_vertical_diff_shapes_SOURCES = \
 	../src/Board.cc \
 	../src/Digraph.cc \
 	../src/Callback.cc \
 	Test.cc \
 	two_regular_cells_with_vertical_diff_shapes.cc
